# Dynamic-Pricing-Engine

./: .gitattributes  .gitignore  README.md  app.py  demo.py  export_Project.py  main.py  project_code_only.txt  pyproject.toml  requirements.txt  setup.py  template.py
artifact/data_transformation/transformed_object/: preprocessor.pkl
artifact/model_trainer/: model.pkl
config/: config.yaml  configuration.py  schema.yaml
notebook/: final_pricing_dataset_with_reviews.csv  mongo.ipynb  mongoDB_demo.ipynb
research/: trials.ipynb
src/pricing_engine/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/pricing_engine/configuration/: mongo_db_connections.py
src/pricing_engine/constants/: __init__.py
src/pricing_engine/data access/: pricing_data.py
src/pricing_engine/entity/: artifact_entity.py  config_entity.py
src/pricing_engine/exception/: __init__.py
src/pricing_engine/logger/: __init__.py
src/pricing_engine/pipeline/: prediction_pipeline.py
src/pricing_engine/utils/: common.py
templates/: index.html  style.css
